syntax = "proto3";

package com.github.martyn82.eventscheduler;

import "com/github/martyn82/eventscheduler/event.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.github.martyn82.eventscheduler.grpc";
option java_outer_classname = "EventSchedulerProto";

service EventScheduler {
  rpc ScheduleEvent(ScheduleEventRequest) returns (ScheduleEventResponse);
  rpc RescheduleEvent(RescheduleEventRequest) returns (RescheduleEventResponse);
  rpc CancelEvent(CancelEventRequest) returns (CancelEventResponse);

  rpc Subscribe(SubscribeRequest) returns (stream Event);
}

message ScheduleEventRequest {
  Event event = 1;
  google.protobuf.Timestamp at = 2;
}

message ScheduleEventResponse {
  ScheduleToken token = 1;
}

message RescheduleEventRequest {
  ScheduleToken token = 1;
  google.protobuf.Timestamp at = 2;
}

message RescheduleEventResponse {
  ScheduleToken token = 1;
}

message CancelEventRequest {
  ScheduleToken token = 1;
}

message CancelEventResponse {}

message SubscribeRequest {
  oneof offset {
    uint64 sequence_number = 1;
    google.protobuf.Timestamp timestamp = 2;
  }
}

message ScheduleToken {
  string token = 1;
}
