syntax = "proto3";

package com.github.martyn82.eventscheduler.grpc;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message Event {
  string message_identifier = 1;
  string aggregate_identifier = 2;
  int64 aggregate_sequence_number = 3;
  string aggregate_type = 4;
  google.protobuf.Timestamp timestamp = 5;
  google.protobuf.Any payload = 6;
  string payload_revision = 7;
  map<string, MetaDataValue> meta_data = 8;
  bool snapshot = 9;
}

message MetaDataValue {
  oneof value {
    bool boolean_value = 1;
    bytes bytes_value = 2;
    double double_value = 3;
    sint64 number_value = 4;
    string text_value = 5;
  }
}
