syntax = "proto3";

package com.github.martyn82.eventscheduler.grpc;

option java_multiple_files = true;

message NewAccountEmailVerificationDeadlinePassed {
  string account_id = 1;
}
